Fixed missing overflow styling

--- a/src/components/Contact/ContactFaq/style.module.css
+++ b/src/components/Contact/ContactFaq/style.module.css
@@ -12,12 +12,14 @@
 .question {
   font-size: 1rem;
   font-weight: 700;
+  overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
 }
 
 .answer {
+  overflow: hidden;
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 1;
